# logru

./: .envrc  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  default.nix  shell.nix
.github/workflows/: ci.yml
benches/: criterion.rs  logic_solver_benchmark.rs  zebra.rs
examples/: arithmetic.rs  repl.rs  zebra.rs  zebra_v2.rs
nix/: sources.json
src/: analysis.rs  arithmetic.rs  ast.rs  lib.rs  logic.rs  main.rs  main_v1.rs  named.rs  resolve.rs  search.rs  solver.rs  term.rs  term_arena.rs  textual.rs  unification.rs  union_find.rs  universe.rs  zebra.rs
src/resolve/: arithmetic.rs  combinators.rs  rules.rs
src/search/: test.rs
src/solver/: test.rs
src/textual/: lexer.rs  parser.rs  pretty.rs
src/v2/: ast.rs  lexer.rs  mod.rs  parser.rs  rules.rs  solver.rs  stack.rs  universe.rs
testfiles/: arithmetic.lru  zebra-reverse.lru  zebra.lru  zebra_v2.lru
