[package]
name = "logru"
version = "0.2.0"
description = "A small, embeddable and fast interpreter for a subset of Prolog."
keywords = ["prolog", "logic-programming", "first-order-logic"]
categories = ["compilers", "algorithms", "mathematics"]
repository = "https://github.com/fatho/logru/"
authors = ["Fabian Thorand <f.thorand@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

include = ["README.md", "testfiles/*", "**/*.rs", "Cargo.toml"]

[dependencies]
logos = "0.13.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
ctrlc = "3.2.2"
dirs = "5.0.1"
rustyline = "12.0.0"
tracing = "0.1.35"
tracing-subscriber = "0.3.11"

[profile.release]
debug = true

[profile.bench]
debug = true

[[bench]]
name = "criterion"
harness = false
