[package]
name = "logru"
version = "0.4.1"
description = "A small, embeddable and fast interpreter for a subset of Prolog."
keywords = ["prolog", "logic-programming", "first-order-logic"]
categories = ["compilers", "algorithms", "mathematics"]
repository = "https://github.com/fatho/logru/"
authors = ["Fabian Thorand <f.thorand@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

include = ["README.md", "testfiles/*", "**/*.rs", "Cargo.toml"]

[dependencies]
logos = "0.14.2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
ctrlc = "3.4"
dirs = "5.0"
rustyline = "15.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.release]
debug = true

[profile.bench]
debug = true

[[bench]]
name = "criterion"
harness = false
